front-end/src/pages/Characters/CharactersRelationships/Chart/CharactersRelationshipChartCharacterItem/CharactersRelationshipChartCharacterItem.css
.characters-relationship-chart-character-item {
	position: absolute;
	width: var(--charactersRelationshipChartItemWidth);
	height: calc(var(--charactersRelationshipChartItemWidth) + 18px);
}

.characters-relationship-chart-character-item:hover,
.characters-relationship-chart-character-item-active {
	z-index: 2;
}

.characters-relationship-chart-character-item-face-image {
	margin: 0 auto;
	border: 3px solid var(--grey1);
	border-radius: 100%;

	width: calc(var(--charactersRelationshipChartItemWidth) - 6px);
	height: calc(var(--charactersRelationshipChartItemWidth) - 6px);

	background: var(--grey3);
}

.characters-relationship-chart-character-item-active .characters-relationship-chart-character-item-face-image {
	border-color: var(--characterColour);
}

.characters-relationship-chart-character-item-face-image img {
	border-radius: inherit;
	width: 100%;
	height: 100%;
	object-fit: cover;
}

.characters-relationship-chart-character-item-name {
	margin-top: 2px;
	text-align: center;
	font-size: 13px;
	font-weight: 700;
	white-space: nowrap;
}

@media (max-width: 750px) {
	.characters-relationship-chart-character-item-name {
		display: none;
	}

	.characters-relationship-chart-character-item-active .characters-relationship-chart-character-item-name {
		display: block;
	}
}

